test/error/OpPreIncRightCondAnd.fu
public static class Test
{
	public static bool Run()
	{
		int i = 0;
		return i == 0 && ++i == 1; //ERROR: ++ not allowed on the right side of &&
	}
}
